Fixes for dark mode

--- a/public/styles/forms.less
+++ b/public/styles/forms.less
@@ -147,7 +147,7 @@ button,
 
   &.dark {
     background: var(--config-color-dark);
-    color: #fff;
+    color: var(--config-color-background-fade);
 
     &.reverse {
       color: var(--config-color-dark);
@@ -238,7 +238,7 @@ select {
   -moz-appearance: none;
   -webkit-transform: translateZ(0px);
   box-sizing: content-box;
-  color: var(--config-color-dark);
+  color: #313131;
   height: 40px;
   line-height: 40px;
   border: solid 1px var(--config-color-fade-light);
